--- a/contact.html
+++ b/contact.html
@@ -1,77 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - NTUA Diesels</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact - NTUA Diesels</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="logo.png" alt="NTUA Diesels Logo">
-        </div>
-        <h1>NTUA Diesels</h1>
-        <p>Get in touch with us!</p>
-    </header>
+  <header class="text-center p-3">
+    <div class="logo">
+      <img 
+        src="images/ntua-diesels.png" alt="NTUA Diesels Logo" class="img-fluid mx-auto d-block" style="max-width: 100px;"/>
+    </div>
+    <h1 class="text-primary">NTUA DIESELS</h1>
+    <button id="darkModeToggle" class="btn btn-secondary mt-2">Dark Mode</button>
+  </header>
 
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="team.html">Team</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">NTUA Diesles</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">Team History</a></li>
+          <li class="nav-item"><a class="nav-link" href="team.html">The Team</a></li>
+          <li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>
         </ul>
-    </nav>
+      </div>
+    </div>
+  </nav>
 
-    <main>
-        <section id="contact-form">
-            <h2>Contact Us</h2>
-            <p>If you have any questions, suggestions, or inquiries, feel free to reach out to us using the form below.</p>
-            <form id="contactForm">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
+  <main class="container my-5">
+    <section id="contact-form" class="mb-5">
+      <h2 class="text-center mb-4">Contact Us</h2>
+      <p class="text-center">
+        If you have any questions, suggestions, or inquiries, feel free to reach out to us using the form below.
+      </p>
+      <form id="contactForm">
+        <div class="mb-3">
+          <label for="name" class="form-label">Name</label>
+          <input 
+            type="text" 
+            class="form-control" 
+            id="name" 
+            placeholder="Enter your name" 
+            required
+          >
+        </div>
 
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
+        <div class="mb-3">
+          <label for="email" class="form-label">Email address</label>
+          <input 
+            type="email" 
+            class="form-control" 
+            id="email" 
+            placeholder="Enter your email" 
+            required
+          >
+          <div id="emailHelp" class="form-text">
+            We'll never share your email with anyone else.
+          </div>
+        </div>
 
-                <label for="subject">Subject:</label>
-                <input type="text" id="subject" name="subject" required>
+        <div class="mb-3">
+          <label for="subject" class="form-label">Subject</label>
+          <input 
+            type="text" 
+            class="form-control" 
+            id="subject" 
+            placeholder="Subject" 
+            required
+          >
+        </div>
 
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="5" required></textarea>
+        <div class="mb-3">
+          <label for="message" class="form-label">Message</label>
+          <textarea 
+            class="form-control" 
+            id="message" 
+            rows="5" 
+            placeholder="Your message" 
+            required
+          ></textarea>
+        </div>
 
-                <button type="submit">Send Message</button>
-            </form>
-        </section>
+        <button type="submit" class="btn btn-primary">Send Message</button>
+      </form>
+    </section>
+    
+    <div class="mb-5">
+      <p>
+        Visit our <a href="https://www.instagram.com/ntua_diesels/" target="_blank">Instagram page</a>
+      </p>
+    </div>
 
-        <section id="social-media">
-            <h2>Follow Us</h2>
-            <p>Stay updated with NTUA Diesels on social media:</p>
-            <ul>
-                <li><a href="https://www.instagram.com/ntua_diesels/" target="_blank">Instagram</a></li>
-            </ul>
-        </section>
+    <section id="map" class="mb-5">
+      <h2>Our Location</h2>
+      <p>Visit us at our training facility:</p>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3131.9494735954377!2d23.7737813!3d37.9730245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a197059d414c5b%3A0xc52574dfbf185481!2sNTUA%20Indoor%20Gym!5e0!3m2!1sen!2sgr!4v1707500000000!5m2!1sen!2sgr"
+        width="100%"
+        height="400"
+        style="border:0;"
+        allowfullscreen=""
+        loading="lazy"
+      ></iframe>
+    </section>
+  </main>
 
-        <section id="map">
-            <h2>Our Location</h2>
-            <p>Visit us at our training facility:</p>
-            <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3131.9494735954377!2d23.7737813!3d37.9730245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a197059d414c5b%3A0xc52574dfbf185481!2sNTUA%20Indoor%20Gym!5e0!3m2!1sen!2sgr!4v1707500000000!5m2!1sen!2sgr" 
-                width="100%" 
-                height="300" 
-                style="border:0;" 
-                allowfullscreen="" 
-                loading="lazy">
-            </iframe>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 NTUA Diesels. All rights reserved.</p>
-    </footer>
-
-    <script src="script.js"></script>
+  <footer class="footer fixed-bottom bg-dark text-white text-center">
+    <p class="m-0 py-2">&copy; 2024 NTUA Diesels. All rights reserved.</p>
+  </footer>
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
