--- a/index.html
+++ b/index.html
@@ -4,26 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NTUA Diesels BC</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    
 </head>
 <body>
-    <header>
-        <h1 class="text-warning">NTUA Diesels</h1>
-        <p>Established in 2024</p>
-        <button id="darkModeToggle">Dark Mode</button>
-    </header>
+    <header class="text-center p-3">
+        <div class="logo">
+            <img 
+              src="images/ntua-diesels.png" alt="NTUA Diesels Logo" class="img-fluid mx-auto d-block" style="max-width: 100px;"/>
+          </div>
+        <h1 class="text-primary text-center">NTUA DIESELS</h1>
+        <button id="darkModeToggle" class="btn btn-secondary mt-2">Dark Mode</button>
+        </header>
 
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">Team History</a></li>
-            <li><a href="team.html">The Team</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">NTUA Diesles</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">Team History</a></li>
+                    <li class="nav-item"><a class="nav-link" href="team.html">The Team</a></li>
+                    <li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
-    <main>
+    <main class="container my-5">
         <section class="welcome">
             <h2>Welcome to NTUA Diesels</h2>
             <p>Your home for the latest news, updates, and game schedules of the NTUA Diesels basketball team.</p>
@@ -35,10 +47,12 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2024 NTUA Diesels. All rights reserved.</p>
+    <footer class="footer fixed-bottom bg-dark text-white text-center">
+        <p class="m-0 py-2">&copy; 2024 NTUA Diesels. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
