modified index and contact pages and made the about pages and create two empty files in stats and tasks as well as the js folder

--- a/index.html
+++ b/index.html
@@ -25,30 +25,43 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">Team History</a></li>
-                    <li class="nav-item"><a class="nav-link" href="team.html">The Team</a></li>
-                    <li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>
+                  <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                  <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                  <li class="nav-item"><a class="nav-link" href="about.html">The Team</a></li>
+                  <li class="nav-item"><a class="nav-link" href="stats.html">The Team stats</a></li>
+                  <li class="nav-item"><a class="nav-link" href="tasks.html">Tasks</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <main class="container my-5">
-        <section class="welcome">
-            <h2>Welcome to NTUA Diesels</h2>
-            <p>Your home for the latest news, updates, and game schedules of the NTUA Diesels basketball team.</p>
-        </section>
-
-        <section class="latest-news">
-            <h2>Latest News</h2>
-            <p>Stay tuned for the latest updates on our team, matches, and events.</p>
-        </section>
+        <section class="welcome text-center mb-5">
+            <h2 class="text-secondary mb-3">Welcome to NTUA Diesels</h2>
+            <p class="mb-4">
+              NTUA Diesels is your go-to source for the latest news, updates, and game schedules.
+              Our team competes in the Basketaki Development League, bringing thrilling matches
+              and a strong community spirit. Explore our website to learn more about the team,
+              upcoming events, and exclusive fan activities.
+            </p>
+            <p class="mb-4">
+              Features include real-time match updates, a dedicated fan tasks page, and an
+              interactive roster that helps you stay connected with your favorite players.
+            </p>
+            <a href="tasks.html" class="btn btn-primary">View Fan Tasks</a>
+          </section>
+      
+          <section class="latest-activity text-center">
+            <h2 class="text-secondary mb-3">Latest Activity</h2>
+            <p class="mb-4">
+              - Fan Poll: Vote for your favorite jersey design (closes soon!)<br/>
+              - New Task Added: <strong>Buy Tickets for Next Game</strong><br/>
+            </p>
+          </section>
     </main>
 
-    <footer class="footer fixed-bottom bg-dark text-white text-center">
-        <p class="m-0 py-2">&copy; 2024 NTUA Diesels. All rights reserved.</p>
+    <footer class="bg-dark text-white text-center py-3">
+        <p class="m-0">&copy; 2024 NTUA Diesels. All rights reserved.</p>
     </footer>
 
 
