--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,9 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">Team History</a></li>
-          <li class="nav-item"><a class="nav-link" href="team.html">The Team</a></li>
-          <li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">The Team</a></li>
+          <li class="nav-item"><a class="nav-link" href="stats.html">The Team stats</a></li>
+          <li class="nav-item"><a class="nav-link" href="tasks.html">Tasks</a></li>
         </ul>
       </div>
     </div>
@@ -113,9 +113,9 @@
     </section>
   </main>
 
-  <footer class="footer fixed-bottom bg-dark text-white text-center">
-    <p class="m-0 py-2">&copy; 2024 NTUA Diesels. All rights reserved.</p>
-  </footer>
+  <footer class="bg-dark text-white text-center py-3">
+    <p class="m-0">&copy; 2024 NTUA Diesels. All rights reserved.</p>
+</footer>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
