--- a/about.html
+++ b/about.html
@@ -4,34 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about - NTUA Diesels</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <script src="js/template.js" defer></script>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-    <header class="text-center p-3 text-info">
-        <div class="logo">
-            <img src="images/ntua-diesels.png" alt="NTUA Diesels Logo" class="img-fluid mx-auto d-block" style="max-width: 100px;">
-        </div>
-        <h1 class="text-primary">NTUA DIESELS</h1>
-        <button id="darkModeToggle" class="btn bg-secondary text-white mt-2">Dark Mode</button>
-    </header>
+<body class="loading">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">NTUA Diesels</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="about.html">The Team</a></li>
-                    <li class="nav-item"><a class="nav-link" href="stats.html">The Team stats</a></li>
-                    <li class="nav-item"><a class="nav-link" href="tasks.html">Tasks</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
 
     <main class="container my-5">
 
@@ -302,10 +279,6 @@
         </div>
     </main>
 
-    <footer class="bg-dark text-white text-center py-3">
-        <p class="m-0">&copy; 2024 NTUA Diesels. All rights reserved.</p>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    
 </body>
 </html>
