--- a/index.html
+++ b/index.html
@@ -1,71 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NTUA Diesels BC</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>NTUA Diesels - Home</title>
+
+  <script src="js/template.js" defer></script>
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
-<body>
-    <header class="text-center p-3">
-        <div class="logo">
-            <img 
-              src="images/ntua-diesels.png" alt="NTUA Diesels Logo" class="img-fluid mx-auto d-block" style="max-width: 100px;"/>
-          </div>
-        <h1 class="text-primary text-center">NTUA DIESELS</h1>
-        <button id="darkModeToggle" class="btn btn-secondary mt-2">Dark Mode</button>
-        </header>
+<body class="loading">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">NTUA Diesles</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                  <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                  <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                  <li class="nav-item"><a class="nav-link" href="about.html">The Team</a></li>
-                  <li class="nav-item"><a class="nav-link" href="stats.html">The Team stats</a></li>
-                  <li class="nav-item"><a class="nav-link" href="tasks.html">Tasks</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+  <div class="container my-5">
+    <section class="welcome text-center my-5">
+      <h2 class="text-secondary mb-3">Welcome to NTUA Diesels</h2>
+      <p class="mb-4">Your home for the latest news, updates, and game schedules.</p>
+      <a href="tasks.html" class="btn btn-primary">View Fan Tasks</a>
+    </section>
 
-    <main class="container my-5">
-        <section class="welcome text-center mb-5">
-            <h2 class="text-secondary mb-3">Welcome to NTUA Diesels</h2>
-            <p class="mb-4">
-              NTUA Diesels is your go-to source for the latest news, updates, and game schedules.
-              Our team competes in the Basketaki Development League, bringing thrilling matches
-              and a strong community spirit. Explore our website to learn more about the team,
-              upcoming events, and exclusive fan activities.
-            </p>
-            <p class="mb-4">
-              Features include real-time match updates, a dedicated fan tasks page, and an
-              interactive roster that helps you stay connected with your favorite players.
-            </p>
-            <a href="tasks.html" class="btn btn-primary">View Fan Tasks</a>
-          </section>
-      
-          <section class="latest-activity text-center">
-            <h2 class="text-secondary mb-3">Latest Activity</h2>
-            <p class="mb-4">
-              - Fan Poll: Vote for your favorite jersey design (closes soon!)<br/>
-              - New Task Added: <strong>Buy Tickets for Next Game</strong><br/>
-            </p>
-          </section>
-    </main>
-
-    <footer class="bg-dark text-white text-center py-3">
-        <p class="m-0">&copy; 2024 NTUA Diesels. All rights reserved.</p>
-    </footer>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <section class="latest-activity text-center">
+      <h2 class="text-secondary mb-3">Latest Activity</h2>
+      <p class="mb-4">
+        - Fan Poll: Vote for your favorite jersey design!<br />
+        - New Task Added: <strong>Buy Tickets for Next Game</strong><br />
+      </p>
+    </section>
+  </div>
 
 </body>
 </html>
