true final with comments and fixed issues

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="loading"> 
-  <main class="container my-5">
+  <main class="container my-5" role="main" aria-label="NTUA Diesels contact page">
     <section id="contact-form" class="mb-5">
       <h2 class="text-center mb-4">Contact Us</h2>
       <p class="text-center">
@@ -85,7 +85,5 @@
       ></iframe>
     </section>
   </main>
-
-
 </body>
 </html>
