--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 
   <script src="js/template.js" defer></script>
   <link rel="stylesheet" href="css/styles.css">
-
 </head>
 <body class="loading">
 
-  <div class="container my-5">
+  <div 
+    class="container my-5" 
+    role="main" 
+    aria-label="NTUA Diesels main content"
+  >
     <section class="welcome text-center my-5">
       <h2 class="text-secondary mb-3">Welcome to NTUA Diesels</h2>
       <p class="mb-4">Your home for the latest news, updates, and game schedules.</p>
@@ -21,8 +24,8 @@
     <section class="latest-activity text-center">
       <h2 class="text-secondary mb-3">Latest Activity</h2>
       <p class="mb-4">
-        - Fan Poll: Vote for your favorite jersey design!<br />
-        - New Task Added: <strong>Buy Tickets for Next Game</strong><br />
+        - Fan Poll: Vote for your favorite jersey design!<br>
+        - New Task Added: <strong>Buy Tickets for Next Game</strong><br>
       </p>
     </section>
   </div>
