--- a/stats.html
+++ b/stats.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>stats - NTUA Diesels</title>
   <script src="js/template.js" defer></script>
-  <link rel="stylesheet" href="css/styles.css"></head>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
 <body class="loading">
-  <main class="container my-5">
+  <main class="container my-5" role="main" aria-label="NTUA Diesels stats page">
     <h2 class="text-secondary text-center mb-4">Season Stats</h2>
 
     <div class="card mb-5">
@@ -247,6 +248,5 @@
       </div>
     </div>
   </main>
-
 </body>
 </html>
