--- a/tasks.html
+++ b/tasks.html
@@ -9,8 +9,7 @@
 </head>
 <body class="loading">
 
-
-  <main class="container my-5">
+  <main class="container my-5" role="main" aria-label="NTUA Diesels tasks page">
     <h2 class="text-secondary text-center mb-4">Tasks</h2>
 
     <div class="card mb-4">
@@ -137,8 +136,5 @@
       </div>
     </div>
   </main>
-
-
-
 </body>
 </html>
